# minigrep

./: .gitignore  Untitled-1.jsx
_MD_tests/metadata_test1/: README.md  index.html
_MD_tests/metadata_test1/src/: lib.rs
_MD_tests/metadata_test2/: Cargo.toml  index.html
_MD_tests/metadata_test2/src/: lib.rs
branches/src/: main
experiments/: test.rs
guessing/src/: main.rs
json_handler/: Cargo.toml
json_handler/src/: main.rs
loops/src/: fahrenheit2Celcius  fahrenheit2Celcius.rs  main  main.rs  stringtest  stringtest.rs  tempCodeRunnerFile.rs
metadata/: Cargo.toml  index.html
metadata/src/: lib.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
rectangles/src/: main  main.rs  tempCodeRunnerFile.rs
restaurants/src/: lib.rs
slice_type/src/: main  main.rs
src/: lib.rs  main  main.rs
src/config/: parser.rs
upload_lib/metadata_extractor/: .gitignore  Cargo.toml  hello.txt  index.html  package.json
upload_lib/metadata_extractor/files/: couple.heic
upload_lib/metadata_extractor/src/: lib.rs  main.rs
upload_lib/uploader/: Cargo.toml
upload_lib/uploader/src/: lib.rs  main.rs
uploader/src/: main.rs
uploader_gui/: Cargo.toml
uploader_gui/src/: main.rs
