[package]
name = "metadata_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
# rexiv2 = "0.9.1"
kamadak-exif = "0.5.4"
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"


[lib]
name= "metadata"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]