[package]
name = "uploader"
version = "0.1.0"
edition = "2021"



[dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "fs"] }
warp = "0.2.3"
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3.5", default-features = false }
bytes = "0.5.6"



[lib]
name= "uploader"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]